Add ts-dot-js vscode extension icon

--- a/packages/ts-dot-js/vscode-extension/package.json
+++ b/packages/ts-dot-js/vscode-extension/package.json
@@ -9,6 +9,7 @@
   "main": "./src/extension.js",
   "author": "Duane Johnson <duane.johnson@gmail.com>",
   "publisher": "canadaduane",
+  "icon": "./ts-dot-js.png",
   "license": "MIT",
   "categories": [
     "Programming Languages",
