Add helper script

--- a/packages/ts-dot-js/vscode-extension/package.json
+++ b/packages/ts-dot-js/vscode-extension/package.json
@@ -78,7 +78,8 @@
   },
   "scripts": {
     "vscode:prepublish": "rm -rf node_modules && npm install",
-    "package": "vsce package"
+    "package": "vsce package",
+    "publish": "vsce publish"
   },
   "dependencies": {
     "ts-dot-js-typescript-plugin": "0.1.1"
